cmake_minimum_required(VERSION 3.20)
project(learnCPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(learnCPlus main.cpp cmake-build-debug/testout.cpp cmake-build-debug/testout.h supprt.cpp supprt.h)
#add_executable(learnCPlus main.cpp cmake-build-debug/testout.cpp cmake-build-debug/testout.h )
#add_executable(learnCPlus main1.cpp  )

